--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -2,29 +2,39 @@
 	<div class="row">
 		<div class="col-md-6">
             <div class="container-fluid" id='wip-sims'>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>WIP SIMS</h2>
+                <div class="card">
+                    <h5 class="card-header">WIP SIMS</h5>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul>
+                                    <li>GWF-101</li>
+                                    <li>GWF-102</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h1>2</h1>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <ul>
-                            <li>GWF-101</li>
-                            <li>GWF-102</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <h1>2</h1>
-                    </div>
-                </div>
+                </div>                
             </div>
 		</div>
 		<div class="col-md-6">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <h4>GWF HUB FUNCTIONS</h4>
+                        <div class="card">
+                            <h5 class="card-header" style="text-align: center;">GWF HUB FUNCTIONS</h5>
+                            <div class="card-body">
+                                <div class="row">                                    
+                                    <a class="btn btn-block btn-primary">Auto-Answer Template Generator</a> <hr>
+                                    <a class="btn btn-block btn-primary">Validator</a> <hr>
+                                    <a class="btn btn-block btn-primary">Parser</a> <hr>
+                                    <a class="btn btn-block btn-primary">Albacorizer</a> <hr>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
