updates to layout

--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
+{% block content%}
 <div class="container-fluid">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Overview</h1>                           
+      </div>
 	<div class="row">
 		<div class="col-md-6">
             <div class="container-fluid" id='wip-sims'>
@@ -13,7 +18,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <h1>2</h1>
+                                <h1 style="text-align:left">2</h1>
                             </div>
                         </div>
                     </div>
@@ -41,3 +46,4 @@
 		</div>
 	</div>
 </div>
+{% endblock content %}
