--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -54,10 +54,9 @@
           </nav>
       
           <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 main">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-              <h1 class="h2">Overview</h1>                           
-            </div>
-            {% include 'overview.html' %} 
+            {% block content %}
+
+            {% endblock content %}
           </main>
         </div>
       </div>
