created simple retrieving functionality for the validator

--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -34,7 +34,7 @@
                             <div class="card-body">
                                 <div class="row">                                    
                                     <a class="btn btn-block btn-primary">Auto-Answer Template Generator</a> <hr>
-                                    <a class="btn btn-block btn-primary">Validator</a> <hr>
+                                    <a href="{% url 'validator' %}" class="btn btn-block btn-primary">Validator</a> <hr>
                                     <a class="btn btn-block btn-primary">Parser</a> <hr>
                                     <a class="btn btn-block btn-primary">Albacorizer</a> <hr>
                                 </div>
