--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -1,49 +1,30 @@
 {% extends 'base.html' %}
-{% block content%}
-<div class="container-fluid">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Overview</h1>                           
-      </div>
-	<div class="row">
-		<div class="col-md-6">
-            <div class="container-fluid" id='wip-sims'>
-                <div class="card">
-                    <h5 class="card-header">WIP SIMS</h5>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <ul>
-                                    <li>GWF-101</li>
-                                    <li>GWF-102</li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6">
-                                <h1 style="text-align:left">2</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>                
+{% block content %}
+
+<div class="main-panel">
+    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top " id="navigation-example">
+        <div class="container-fluid">
+            <div class="navbar-wrapper">
+                <a class="navbar-brand" href="#">Overview</a>
             </div>
-		</div>
-		<div class="col-md-6">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <h5 class="card-header" style="text-align: center;">GWF HUB FUNCTIONS</h5>
-                            <div class="card-body">
-                                <div class="row">                                    
-                                    <a class="btn btn-block btn-primary">Auto-Answer Template Generator</a> <hr>
-                                    <a class="btn btn-block btn-primary">Validator</a> <hr>
-                                    <a class="btn btn-block btn-primary">Parser</a> <hr>
-                                    <a class="btn btn-block btn-primary">Albacorizer</a> <hr>
-                                </div>
-                            </div>
+        </div>
+    </nav>
+    <div class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-4 col-lg-12">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-success">
+                            <div class="ct-chart" id="dailySalesChart"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class=""></h4>
                         </div>
                     </div>
                 </div>
             </div>
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
+
 {% endblock content %}
