--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -1,24 +1,88 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <div class="main-panel">
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top " id="navigation-example">
-        <div class="container-fluid">
-            <div class="navbar-wrapper">
-                <a class="navbar-brand" href="#">Overview</a>
-            </div>
-        </div>
-    </nav>
+    {% include 'navbar.html' %} 
     <div class="content">
+        <h2>GWF App Dashboard</h2>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-4 col-lg-12">
+                <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-success">
-                            <div class="ct-chart" id="dailySalesChart"></div>
+                            <div class="ct-chart" id="dailySalesChart">
+                                <h1 style="text-align: center;">IMG</h1>
+                            </div>
                         </div>
                         <div class="card-body">
-                            <h4 class=""></h4>
+                            <h4 class="card-title">Auto-Answer Templates Generator</h4>
+                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="card-footer">
+                            <div class="nav-tabs-wrapper">
+                                <button type="button" class="btn btn-secondary btn-sm">
+                                    Access AA Generator
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-12">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-primary">
+                            <div class="ct-chart" id="dailySalesChart">
+                                <h1 style="text-align: center;">IMG</h1>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Validator</h4>
+                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="card-footer">
+                            <div class="nav-tabs-wrapper">
+                                <button type="button" class="btn btn-secondary btn-sm">
+                                    Access Validator
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-12">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-warning">
+                            <div class="ct-chart" id="dailySalesChart">
+                                <h1 style="text-align: center;">IMG</h1>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Parser</h4>
+                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="card-footer">
+                            <div class="nav-tabs-wrapper">
+                                <button type="button" class="btn btn-secondary btn-sm">
+                                    Access Parser
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-12">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-danger">
+                            <div class="ct-chart" id="dailySalesChart">
+                                <h1 style="text-align: center;">IMG</h1>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Albacorizer</h4>
+                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="card-footer">
+                            <div class="nav-tabs-wrapper">
+                                <button type="button" class="btn btn-secondary btn-sm">
+                                    Access Albacorizer
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
