--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -39,9 +39,9 @@
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
-                                <button type="button" class="btn btn-secondary btn-sm">
+                                <a href="{% url 'validator' %}" class="btn btn-secondary btn-sm">
                                     Access Validator
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
