--- a/gwf_hub/templates/validator.html
+++ b/gwf_hub/templates/validator.html
@@ -1,24 +1,38 @@
-{% extends 'base.html' %}
-
+{% extends 'base.html' %} 
 {% block content %}
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Validator</h1>                           
-  </div>
-<form method= "POST" action="">
-    {% csrf_token %}
-    <div class="form-group">         
-        <label for="jsonCodeSections">
-           Workflow JSON Sections
-        </label>
-        <input type="text" class="form-control" name="jsonCodeSections" />
-        <label for="jsonCodeQuestions">
-            Workflow JSON Questions
-         </label>
-         <input type="text" class="form-control" name="jsonCodeQuestions" />
-    </div><br>   
-    <button type="submit" class="btn btn-primary">
-        Submit
-    </button>
-</form>
-
+<div class="main-panel">
+    {% include 'navbar.html' %}
+    <div class="content">
+        <h2>Validator</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <form method= "POST" action="">
+                        {% csrf_token %}
+                        <label for="sections">
+                            Workflow JSON Sections
+                        </label><br>
+                        <textarea id="sections" name="sections" rows="4" cols="50"></textarea><br>
+                        <label for="questions">
+                            Workflow JSON Questions
+                        </label><br>
+                        <textarea id="questions" name="questions" rows="4" cols="50"></textarea> <hr>                        
+                        <button type="submit" class="btn btn-primary">
+                            Validate !
+                        </button>
+                    </form>
+                </div>
+                <div class="col-md-8">
+                    <p>Validator is a tool that will allow you to get a specific workflow analized to determine flaws in the hierarchy of questions & answers</p>
+                    <ol>
+                        <li>Copy both questions and sections JSON codes from the required workflows</li>
+                        <li>Paste the JSON in their respective field</li>
+                        <li>Specify your filters with the selectors</li>
+                        <li>Submit to Validate!</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
