Updated validator html templates and .py files, including viewa.py. Added new .css file for personalized css

--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static '/css/material-dashboard.css' %}"/>
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <title>GWF Workspace</title>
 </head>
 <body class="dark-edition">
