--- a/gwf_hub/templates/validator_result.html
+++ b/gwf_hub/templates/validator_result.html
@@ -8,13 +8,7 @@
                 <h2>
                     Issues listed if any:
                     <br>
-                    <h4>
-                        <ul>
-                            {% for thing in issues_to_print %}
-                            <li>{{ thing }}</li>
-                            {% endfor %}
-                        </ul>
-                    </h4>
+                    <pre><textarea>{{ issues_to_print }}</textarea></pre>
                 </h2>
             </div>
         </div>
