--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static '/css/material-dashboard.css' %}"/>
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    <script src="https://kit.fontawesome.com/876a366f24.js" crossorigin="anonymous"></script>
     <title>GWF Workspace</title>
 </head>
 <body class="dark-edition">
