--- a/gwf_hub/templates/validator.html
+++ b/gwf_hub/templates/validator.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block content %}
 <div class="main-panel">
     {% include 'navbar.html' %}
@@ -7,16 +7,19 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
-                    <form method= "POST" action="">
+                    <form method="POST" action="">
                         {% csrf_token %}
                         <label for="sections">
                             Workflow Sections JSON Code
                         </label><br>
-                        <textarea name="sections_json" placeholder="Enter Sections JSON code" rows="4" cols="70"></textarea><br>
+                        <textarea name="sections_json" placeholder="Enter Sections JSON code" rows="4"
+                                  cols="70"></textarea><br>
                         <label for="questions">
                             Workflow Questions JSON Code
                         </label><br>
-                        <textarea name="questions_json" placeholder="Enter Questions JSON code" rows="4" cols="70"></textarea><hr>
+                        <textarea name="questions_json" placeholder="Enter Questions JSON code" rows="4"
+                                  cols="70"></textarea>
+                        <hr>
                         <h3>Include</h3>
                         <label class="switch">
                             <input type="checkbox" name="auto_answers" id="autoanswers">
@@ -39,7 +42,7 @@
                         </label><label style="margin-left: 5px;">Inactive question groups</label><br>
 
                         <label class="switch">
-                            <input type="checkbox"  id="mandatesnc" name="mandates_not_connected">
+                            <input type="checkbox" id="mandatesnc" name="mandates_not_connected">
                             <span class="slider round"></span>
                         </label><label style="margin-left: 5px;">Mandates not connected</label><br>
 
@@ -47,22 +50,30 @@
                             <input type="checkbox" id="wrongjumps" name="wrong_jumps">
                             <span class="slider round"></span>
                         </label><label style="margin-left: 5px;">Wrong Jumps Used</label><br>
-                    <button type="submit" class="btn btn-primary">Validate !</button>
+                        <button type="submit" class="btn btn-primary">Validate !</button>
                     </form>
                 </div>
                 <div class="col-md-6">
-                    <p style="color: grey;"><strong>Validator</strong> is a tool used by GWF team to validate the functions/features requested by the Workflow specialist. It gives specific outputs in terms of which questions in the flow are using auto answers, which answers are using jumps, are those jumps correctly set, and much more.
+                    <p style="color: grey;"><strong>Validator</strong> is a tool used by GWF team to validate the
+                        functions/features requested by the Workflow specialist. It gives specific outputs in terms of
+                        which questions in the flow are using auto answers, which answers are using jumps, are those
+                        jumps correctly set, and much more.
                     </p>
                     <ol>
-                        <li style="color:grey;">Copy both questions and sections JSON codes from the required workflows</li>
+                        <li style="color:grey;">Copy both questions and sections JSON codes from the required
+                            workflows
+                        </li>
                         <li style="color:grey;">Paste the JSON in their respective field</li>
                         <li style="color:grey;">Specify your filters with the selectors</li>
                         <li style="color:grey;">Submit to Validate!</li>
-                    </ol><br>
+                    </ol>
+                    <br>
                     {% if issues_to_print %}
-                        <h3 style="color:grey;">Validator Result</h3>
-                        <p style="color:grey;">Issues listed if any:</p>
-                        <pre><textarea rows="6" cols="80">{{ issues_to_print }}</textarea></pre>
+                    <h3 style="color:grey;">Validator Result</h3>
+                    <p style="color:grey;">Issues listed if any:</p>
+                    <pre><textarea rows="6" cols="80">{{ issues_to_print }}</textarea></pre>
+                    {% else %}
+                    <h3 style="color:grey;">No issues to output</h3>
                     {% endif %}
                 </div>
             </div>
