Parser first version

--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -59,9 +59,9 @@
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
-                                <button type="button" class="btn btn-secondary btn-sm">
+                                <a href="{% url 'json_parser' %}" class="btn btn-secondary btn-sm">
                                     Access Parser
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
