--- a/gwf_hub/templates/json_parser.html
+++ b/gwf_hub/templates/json_parser.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
- Checking for the parser application
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+<div class="main-panel">
+    {% include 'navbar.html' %}
+    <br><br>
+    <form method="post" action="parsed_files/">
+        {% csrf_token %}
+        <div class="form-group mt-5">
+            <label class="col-sm-10 col-form-label"><h3>Please enter the workflow IDs seperated with ',' (commas)</h3>
+            </label>
+            <br><br><br><br>
+            <div class="col-sm-7 ml-4 mt-2">
+                <input type="text" name="workflows" class="form-control" placeholder="Workflows" width="40%">
+                <label class="switch mt-5">
+                            <input type="checkbox" name="region_na" id="regionna">
+                            <span class="slider round"></span>
+                        </label><label style="margin-left: 5px;">NA</label><br>
+                <label class="switch">
+                            <input type="checkbox" name="region_eu" id="regioneu">
+                            <span class="slider round"></span>
+                        </label><label style="margin-left: 5px;">EU</label><br>
+                <label class="switch">
+                            <input type="checkbox" name="region_fe" id="regionfe">
+                            <span class="slider round"></span>
+                        </label><label style="margin-left: 5px;">FE</label><br>
+                <br>
+                <button type="submit" class="btn btn-secondary btn-sm mt-3 ">Generate!</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+{% endblock content %}
