--- a/gwf_hub/templates/validator.html
+++ b/gwf_hub/templates/validator.html
@@ -69,10 +69,14 @@
                         <li style="color:grey;">Specify your filters with the selectors</li>
                         <li style="color:grey;">Submit to Validate!</li>
                     </ol><br>
-                    {% if issues_to_print != "" %}
+                    {% if error_found %}
                         <h3 style="color:grey;">Validator Result</h3>
                         <p style="color:grey;">Data collected if any:</p>
                         <pre><textarea rows="6" cols="80" style="color:red">{{ issues_to_print }}</textarea></pre>
+                    {% else %}
+                        <h3 style="color:grey;">Validator Result</h3>
+                        <p style="color:grey;">Data collected if any:</p>
+                        <pre><textarea rows="6" cols="80" style="color:grey">{{ issues_to_print }}</textarea></pre>
                     {% endif %}
                 </div>
             </div>
