generator updates on form

--- a/gwf_hub/templates/generator_input.html
+++ b/gwf_hub/templates/generator_input.html
@@ -1,6 +1,14 @@
+    {% if content %}
+        <select style="margin-right: 15px;" name="question_ids" id="q-ids">
+            {% for id in content %}
+                <option value="{{id}}">{{id}}</option>
+            {% endfor %}
+        </select>
+    {% else %}
     <select style="margin-right: 15px;" name="question_ids" id="q-ids">
         {% for id in question_ids_table %}
             <option value="{{id.question_id}}">{{id.question_id}}</option>
         {% endfor %}
     </select>
+    {% endif %}
 <hr>
