--- a/gwf_hub/templates/json_parser.html
+++ b/gwf_hub/templates/json_parser.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <div class="main-panel">
     {% include 'navbar.html' %}
     <br><br>
     <form method="post" action="parsed_files/">
         {% csrf_token %}
         <div class="form-group mt-5">
-            <label class="col-sm-10 col-form-label"><h3>Please enter the workflow IDs seperated with ',' (commas)</h3>
+            <label class="col-sm-10 col-form-label"><h3>Please enter the workflow ID(s)</h3>
             </label>
             <br><br><br><br>
             <div class="col-sm-7 ml-4 mt-2">
