--- a/gwf_hub/templates/parsed_files.html
+++ b/gwf_hub/templates/parsed_files.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<link rel="stylesheet" href="/css/loader.css'">
 <div class="main-panel">
     {% include 'navbar.html' %}
+    <div class="loader"></div>
 </div>
 {% endblock content %}
