--- a/gwf_hub/templates/generator.html
+++ b/gwf_hub/templates/generator.html
@@ -22,6 +22,12 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
+                    {% if prevSelect %}
+                        <h3>Additional Inputs</h3>
+                        {% for inputs in prevSelect %}
+                            <label for="input-label-{{forloop.counter}}">{{inputs}}</label>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
