--- a/gwf_hub/templates/generator_input.html
+++ b/gwf_hub/templates/generator_input.html
@@ -1,9 +1,9 @@
-    {% if content %}
-        <select style="margin-right: 15px;" name="question_ids" id="q-ids">
-            {% for id in content %}
-                <option value="{{id}}">{{id}}</option>
-            {% endfor %}
-        </select>
+    {% if prevSelect %}
+        <!-- <select style="margin-right: 15px;" name="question_ids" id="q-ids">
+            {% for id_select in prevSelect %}
+                    <option value="{{id_select}}" selected>{{id_select}}</option>
+            {% endfor %}            
+        </select> -->
     {% else %}
     <select style="margin-right: 15px;" name="question_ids" id="q-ids">
         {% for id in question_ids_table %}
@@ -12,3 +12,16 @@
     </select>
     {% endif %}
 <hr>
+
+
+{% if prevSelect %}
+    <select name="question_ids" id="q-ids">
+    {% for select in prevSelect %}
+            {% if select == ids %}
+                <option value="{{select}}" selected>{{select}}</option>
+            {% else %}
+                <option value="{{ids.question_id}}">{{ids.question_id}}</option>
+            {% endif %}
+    {% endfor %}
+    </select>
+{% endif %}
