Made change to add browser choice and few error handlings

--- a/gwf_hub/templates/json_parser.html
+++ b/gwf_hub/templates/json_parser.html
@@ -22,8 +22,18 @@
                 <label class="switch">
                     <input type="checkbox" name="region_fe" id="regionfe">
                     <span class="slider round"></span>
-                </label><label style="margin-left: 5px;">FE</label><br>
-                <br>
+                </label><label style="margin-left: 5px;">FE</label><br><br>
+
+                <label class="switch">
+                    <input type="checkbox" name="chrome" id="chromebr">
+                    <span class="slider round"></span>
+                </label><label style="margin-left: 5px;">Chrome</label><br>
+
+                <label class="switch">
+                    <input type="checkbox" name="firefox" id="firefoxbr">
+                    <span class="slider round"></span>
+                </label><label style="margin-left: 5px;">Firefox</label><br>
+
                 <button type="submit" class="btn btn-secondary btn-sm mt-3 ">Generate!</button>
                 <br>
                 {% if error != "" %}
