--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -79,9 +79,9 @@
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
-                                <button type="button" class="btn btn-secondary btn-sm">
-                                    Access Albacorizer
-                                </button>
+                                    <a href="{% url 'albacorizer' %}" class="btn btn-secondary btn-sm">
+                                        Access Albacorizer
+                                    </a>
                             </div>
                         </div>
                     </div>
