--- a/gwf_hub/templates/albacorizer_output.html
+++ b/gwf_hub/templates/albacorizer_output.html
@@ -3,13 +3,16 @@
 <div class="main-panel">
     {% include 'navbar.html' %}
   <br><br><br>
-  Sections JSON Code
+  <div style="margin-left:20px;">
+  <p style="margin-left:5px; color:grey;">Sections JSON Code</p>
   {% if sections_json != "" %}
-  <textarea name="sections_json" rows="5" cols="70">{{ sections_json }}</textarea><br>
+  <textarea name="sections_json" style="margin-left:10px;" rows="5" cols="70">{{ sections_json }}</textarea><br>
   {% endif %}
+  <br><br>
   {% if questions_json != "" %}
-  Questions JSON Code
-  <textarea name="sections_json" rows="7" cols="70">{{ questions_json }}</textarea><br>
+  <p style="margin-left:5px; color:grey;">Questions JSON Code</p>
+  <textarea name="sections_json" style="margin-left:10px;" rows="7" cols="70">{{ questions_json }}</textarea><br>
   {% endif %}
+    </div>
 </div>
 {% endblock content %}
