--- a/gwf_hub/templates/json_parser.html
+++ b/gwf_hub/templates/json_parser.html
@@ -36,7 +36,7 @@
 
                 <button type="submit" class="btn btn-secondary btn-sm mt-3 ">Generate!</button>
                 <br>
-                {% if error != "" %}
+                {% if error %}
                 <p style="color:red;">{{ error }}</p>
                 {% endif %}
 
