--- a/gwf_hub/templates/generator.html
+++ b/gwf_hub/templates/generator.html
@@ -21,14 +21,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     {% if prevSelect %}
                         <h3>Additional Inputs</h3>
                         {% include 'generator_input.html' %}
-                    {% elif generated %}
-                        <h3>Auto Generated Template</h3>
-                        <textarea name="generated-template" id="" cols="80" rows="40">{{generated}}</textarea>
                     {% endif %}
+                    <hr>
+                </div>
+                <div class="col-md-6">
+                    {% if generated %}
+                        <div>
+                        <h3 style="display: inline-block;">Auto Generated Template</h3> <button class="btn btn-sm btn-info" type="button" style="float: right;">Copy to clipboard</button>
+                        <textarea name="generated-template" id="" cols="80" rows="40">{{generated}}</textarea>
+                        </div>
+                    {% endif %}
+                    <hr>
                 </div>
             </div>
         </div>
